--- a/EasyMoney/app/src/main/res/values/strings.xml
+++ b/EasyMoney/app/src/main/res/values/strings.xml
@@ -1,3 +1,19 @@
 <resources>
     <string name="app_name">Easy Money</string>
+    <string name="title_activity_splash">FullscreenActivity</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="txt_welcome">Welcome <br /> <br /> The Easiest Way <br /> Manage Your Money </string>
+    <string name="txt_btn_login">LOGIN</string>
+    <string name="txt_btn_signUp">SIGN UP</string>
+    <string name="title_activity_login">LoginActivity</string>
+    <string name="prompt_email">User Email</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="welcome">"Welcome !"</string>
+    <string name="invalid_username">Not a valid username</string>
+    <string name="invalid_password">Password must be >5 characters</string>
+    <string name="login_failed">"Login failed"</string>
+    <string name="txtLoginTitle">Login</string>
 </resources>
