--- a/EasyMoney/app/src/main/res/values/strings.xml
+++ b/EasyMoney/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="hint_monthly_salary">Monthly Salary</string>
     <string name="hint_monthly_saving">Monthly Saving</string>
     <string name="prefix">$</string>
+    <string name="btn_sign_up">Sign UP</string>
 </resources>
