--- a/EasyMoney/app/src/main/res/values/strings.xml
+++ b/EasyMoney/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="hint_monthly_saving">Monthly Saving</string>
     <string name="prefix">$</string>
     <string name="btn_sign_up">Sign UP</string>
+    <string name="group_name"> Group 6 - CSIS3175 Team project</string>
 </resources>
