--- a/EasyMoney/app/src/main/res/values/strings.xml
+++ b/EasyMoney/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="btn_sign_up">Sign up</string>
     <string name="group_name"> Group 6 - CSIS3175 Team project</string>
     <string name="app_icon_description">App icon image</string>
+    <string name="trackerHeader">Expense Tracker</string>
 </resources>
