--- a/EasyMoney/app/src/main/res/values/strings.xml
+++ b/EasyMoney/app/src/main/res/values/strings.xml
@@ -38,4 +38,17 @@
     <string name="goalList">List</string>
     <string name="profileHeader">Profile</string>
     <string name="editProfileBtn">Edit Profile</string>
+    <string name="goalEnternainment">Entertainment</string>
+    <string name="goalDining">Dining</string>
+    <string name="goalGroceries">Groceries</string>
+    <string name="goalTransport">Transport</string>
+    <string name="goalShopping">Shopping</string>
+    <string name="goalOther">Other</string>
+    <string name="trackerDAHead">Daily Allowance</string>
+    <string name="trackerIncomeHeader">Income</string>
+    <string name="trackerSavingsHead">Savings</string>
+    <string name="trackerExpenseHead">Latest Expenses</string>
+    <string name="trackerAddIncome">Add Income</string>
+    <string name="trackerAddSavings">Add Savings</string>
+    <string name="trackerAddExpense">Add Expense</string>
 </resources>
