Revert "trying to revert ¯\_(ツ)_/¯"
This reverts commit cb0afc2426324d87f204bcad1b532c9136a3e66b.

--- a/EasyMoney/app/src/main/res/values/strings.xml
+++ b/EasyMoney/app/src/main/res/values/strings.xml
@@ -64,6 +64,34 @@
     <string name="profileBills">Recurring Bills</string>
     <string name="profileGoal">Expense Goal</string>
     <string name="profileLogOut">Log Out</string>
+    <string name="txtScrNameBE">Big Expense</string>
+    <string name="txtBEOption1">Option 1</string>
+    <string name="txtBEOption2">Option 2</string>
+    <string name="txtBEOption3">Option 3</string>
+    <string name="txtBEOptionName1">Cut down daily expense to</string>
+    <string name="txtBEOptionName2">Cut down savings to</string>
+    <string name="txtBEOptionName3">Get a loan</string>
+    <string name="txtScrBESub">Set up your expense</string>
+    <string name="bigExHint1">Category of big expense</string>
+    <string name="bigExHint2">Big Expense Period</string>
+    <string name="bigExHint3">Amount of estimated cost</string>
+    <string name="bigEx">Edit Profile</string>
+    <string name="btnBigEx">SET BIG EXPENSE</string>
+    <string-array name="expensePeriod">
+        <item>Big expense period</item>
+        <item>Day</item>
+        <item>Week</item>
+        <item>Month</item>
+        <item>Year</item>
+    </string-array>
+    <string name="image">An image</string>
+    <string name="reportHeader">Report</string>
+    <string name="reportTotExp">Total Expense</string>
+    <string name="reportTotInc">Total Income</string>
+    <string name="reportTotSav">Total Saving</string>
+
+    <string name="reportSubHeader">Total balance this month</string>
+
     <!--Kate's Strings Start-->
     <string name="hint_amount">Amount</string>
     <string name="hint_desc">Description</string>
@@ -77,6 +105,7 @@
     <string name="btn_add_expense">Add Expense</string>
     <string name="btn_add_recurring_bills">Add Recurring Bills</string>
     <string name="btn_back">Go to previous screen</string>
+    <string name="textview">TextView</string>
     <string-array name="categoriesExpense">
         <item>Category</item>
         <item>Entertainment</item>
